syntax = "proto3";

package auth.v1;

option go_package = "github.com/HardMax71/syncwrite/backend/pkg/proto/auth/v1;authv1";

import "google/protobuf/timestamp.proto";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Refresh(RefreshRequest) returns (RefreshResponse) {}
  rpc Logout(LogoutRequest) returns (LogoutResponse) {}
  rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse) {}
}

message User {
  string id = 1;
  string email = 2;
  string username = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message RegisterRequest {
  string email = 1;
  string username = 2;
  string password = 3;
}

message RegisterResponse {
  User user = 1;
  string access_token = 2;
  string refresh_token = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  User user = 1;
  string access_token = 2;
  string refresh_token = 3;
}

message RefreshRequest {
  string refresh_token = 1;
}

message RefreshResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message LogoutRequest {
  string refresh_token = 1;
}

message LogoutResponse {
  bool success = 1;
}

message VerifyTokenRequest {
  string token = 1;
}

message VerifyTokenResponse {
  bool valid = 1;
  User user = 2;
}